--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="/recipes/lasagna.html">Lasagna</a>
+    <ul>
+        <li><a href="/recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="/recipes/KaleCaesarSalad.html">Kale Caesar Salad</a></li>
+        <li><a href="/recipes/lentilbolognese.html">Lentil Bolognese</a></li>
+    </ul>
+
 </body>
 </html>
