Fix links in li in main index html file

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="/recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="/recipes/KaleCaesarSalad.html">Kale Caesar Salad</a></li>
-        <li><a href="/recipes/lentilbolognese.html">Lentil Bolognese</a></li>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/KaleCaesarSalad.html">Kale Caesar Salad</a></li>
+        <li><a href="./recipes/lentilbolognese.html">Lentil Bolognese</a></li>
     </ul>
 
 </body>
