Fixed image link path on receipe html

--- a/recipes/KaleCaesarSalad.html
+++ b/recipes/KaleCaesarSalad.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Recipe for Lasagna</h1>
-    <img src="/images/KaleSalad.webp" alt="Image of Kale Caesar Salad">
+    <img src="../images/KaleSalad.webp" alt="Image of Kale Caesar Salad">
     <h2>Description</h2>
     <p>Traditional Caesar salad that uses kale instead of romaine! Makes 4 side-dish portions, but you can make it a main dish meal by topping it with a grilled protein, such as chicken or salmon!</p>
     <p>You may have leftover dressing, depending on how much you like. It keeps well in the refrigerator for up to a week.</p>
