--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Recipe for Lasagna</h1>
-    <img src="/images/lasagna.webp" alt="Image of Lasagna">
+    <img src="../images/lasagna.webp" alt="Image of Lasagna">
     <h2>Description</h2>
     <p>This is my mom's special homemade lasagna recipe with a meaty, made-from-scratch tomato sauce and a deliciously cheesy filling. A more traditional homemade lasagna filling would be made with ricotta but my mom's recipe calls for a blend of small-curd cottage cheese and Parmesan. </p>
     <p>I have found none better anywhere. Serve with a leafy green salad and crusty garlic bread.</p>
