--- a/recipes/lentilbolognese.html
+++ b/recipes/lentilbolognese.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Recipe for Lasagna</h1>
-    <img src="/images/LentilBolognese.webp" alt="Image of Lentil Bolognese">
+    <img src="../images/LentilBolognese.webp" alt="Image of Lentil Bolognese">
     <h2>Description</h2>
     <p>Delicious vegetarian sauce for pasta, so tasty, and as nice as a meat bolognese. It can also be served with potatoes.</p>
     
